--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/scss/styles.scss"
+              "src/scss/theme.scss"
             ],
             "scripts": []
           },
@@ -71,7 +71,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
-              "src/scss/styles.scss"
+              "src/scss/theme.scss"
             ],
             "assets": [
               "src/assets",
