--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "node-sass": "^4.14.1",
     "protractor": "^5.4.2",
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~4.1.0",
