--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^7.2.9",
     "core-js": "^2.6.5",
     "ngx-device-detector": "^1.4.5",
+    "node-sass": "^4.14.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
