--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/animations": "^7.2.9",
     "@angular/cdk": "^7.3.4",
     "@angular/common": "^7.2.9",
@@ -26,12 +27,13 @@
     "@angular/router": "^7.2.9",
     "core-js": "^2.6.5",
     "ngx-device-detector": "^1.3.5",
+    "node-gyp": "^7.1.2",
+    "node-sass": "^4.14.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "^7.3.6",
     "@angular/compiler-cli": "^7.2.9",
     "@angular/language-service": "^7.2.9",
@@ -48,7 +50,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
-    "rxjs-tslint": "^0.1.7",
+    "rxjs-tslint": "^0.1.8",
     "ts-node": "~4.1.0",
     "tslint": "^5.14.0",
     "typescript": "3.2.4",
